test/types/string/ferguson/literal-octal.good
literal-octal.chpl:1: error: octal escape not supported in string literal: near '"'
literal-octal.chpl:1: error: octal escape not supported in string literal: near '"'
